# codemap

./: .codemapignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Makefile  README.md  changes.org  changes.txt  codemap.install  codemap.opam  configure  copyright.txt  dune  dune-project  install.txt  install_linux.txt  install_macos.txt  install_windows.txt  log_config.json  test  todo.org  todo.txt
.claude/: settings.local.json
.github/workflows/: docker.yml
archi_code/: archi_code.ml  archi_code.mli  archi_code_lexer.mll  archi_code_parse.ml  archi_code_parse.mli  dune
code_map/: .md5sum_async.mli  .md5sum_cairo_helpers.ml  .md5sum_completion2.mli  .md5sum_controller2.ml  .md5sum_draw2.ml  .md5sum_draw_basics.mli  .md5sum_draw_common.mli  .md5sum_draw_microlevel.ml  .md5sum_editor_connection.ml  .md5sum_help.ml  .md5sum_model_database_code.ml  .md5sum_parsing2.ml  .md5sum_ui_navigation.ml  .md5sum_ui_navigation.mli  .md5sum_ui_search.mli  .md5sum_view2.mli  .md5sum_view_mainmap.mli  .md5sum_view_overlays.ml  .md5sum_view_overlays.mli
database_code/: big_grep.ml  database_code.ml  database_code.mli  dune
docs/: Makefile  Visual.nw  codemap.nw  defs_and_uses.list
docs/literate/: Config.tex  Makefile  Visual.nw
gui/: dune  gui.ml
h_files-format/: dune  outline.ml  outline.mli  simple_format.ml  source_tree.ml  source_tree.mli
h_program-visual/: dune  layer_archi.ml  layer_archi.mli  layer_vcs.ml  layer_vcs.mli  treemap_pl.ml  treemap_pl.mli
h_version-control/: cvs.ml  dune  generic_vcs.ml  generic_vcs.mli  git.ml  git.mli  lib_vcs.ml  lib_vcs.mli  main_vcs.ml  mercurial.ml  mercurial.mli  patch.ml  test_version_control.ml  test_version_control.mli  unit_version_control.ml  version_control.mli
h_visualization/: dune  plot_jgraph.ml  simple_color.ml  treemap.ml  treemap.mli
highlight_code/: Highlight_code.ml  dune
highlighters/: Highlight_AST.ml  Highlight_AST.mli  Highlight_scala.ml  Highlight_scala.mli  Parse_and_highlight.ml  Parse_and_highlight.mli  Parse_languages.ml  Parse_languages.mli  dune  highlight_cpp.ml  highlight_cpp.mli  highlight_go.ml  highlight_go.mli  highlight_html.mli  highlight_java.ml  highlight_java.mli  highlight_js.ml  highlight_js.mli  highlight_lisp.ml  highlight_lisp.mli  highlight_ml.ml  highlight_ml.mli  highlight_nw.ml  highlight_nw.mli  highlight_php.ml  highlight_php.mli  highlight_python.ml  highlight_python.mli  highlight_ruby.mli
lang_html/: ast_html.ml  dune  lexer_html.mll  lib_parsing_html.ml  lib_parsing_html.mli  parse_html.ml  parse_html.mli  test_parsing_html.ml  test_parsing_html.mli  unit_parsing_html.ml  visitor_html.ml
lang_html/parsing/: dune
lang_lisp/parsing/: dune  test_parsing_lisp.ml
lang_nw/: dune  lexer_nw.mll  parse_nw.ml  parse_nw.mli  test_parsing_nw.ml  test_parsing_nw.mli  token_helpers_nw.mli
lang_nw/parsing/: dune  test_parsing_nw.ml
lang_text/: dune  org_mode.ml  org_mode.mli  test_parsing_text.ml
languages/: pad.txt
languages/html/: ast_html.ml  dune  lexer_html.mll  parse_html.ml  parser_html.mly  pretty_print_html.ml  test_parsing_html.ml  token_helpers_html.ml  token_helpers_html.mli  visitor_html.mli
languages/nw/: dune  lexer_nw.mll  parse_nw.ml  parse_nw.mli  token_helpers_nw.ml
languages/text/: dune  org_mode.mli
layer_code/: dune  layer_code.ml  layer_code.mli
lib/: .md5sum_async.ml  .md5sum_cairo_helpers.mli  .md5sum_completion2.ml  .md5sum_controller2.mli  .md5sum_draw2.mli  .md5sum_draw_basics.ml  .md5sum_draw_common.ml  .md5sum_draw_labels.ml  .md5sum_draw_labels.mli  .md5sum_draw_legend.ml  .md5sum_draw_legend.mli  .md5sum_draw_macrolevel.ml  .md5sum_draw_macrolevel.mli  .md5sum_draw_microlevel.mli  .md5sum_editor_connection.mli  .md5sum_flag_visual.ml  .md5sum_help.mli  .md5sum_model2.ml  .md5sum_model2.mli  .md5sum_model_database_code.mli  .md5sum_model_graph_code.ml  .md5sum_model_graph_code.mli  .md5sum_parsing2.mli  .md5sum_style2.ml  .md5sum_style2.mli  .md5sum_ui_layers.ml  .md5sum_ui_layers.mli  .md5sum_ui_search.ml  .md5sum_view2.ml  .md5sum_view_mainmap.ml  .md5sum_view_minimap.ml  .md5sum_view_minimap.mli  Makefile  Visual.nw  cairo_helpers.ml  completion2.ml  controller2.mli  draw_labels.ml  draw_legend.ml  draw_macrolevel.ml  (+23 more)
libs/commons2_/: common2_.ml  common2_.mli  dune  pad.txt
libs/files_format/: dune  outline.ml  outline.mli  simple_format.ml  simple_format.mli  source_tree.ml
libs/graph_code/: Dependencies_matrix_build.ml  Dependencies_matrix_code.ml  Graph_code.ml  Graph_code.mli  Graph_code_adjust.ml  Graph_code_class_analysis.ml  Graph_code_export.ml  Graph_code_opti.ml  Graph_code_prolog.ml  Graphe.ml  Graphe.mli  dune  pad.txt
libs/gui/: Gui.ml  dune
libs/treemap/: dune  treemap.ml  treemap.mli
libs/utils/: dune  parallel.ml
libs/version_control/: Log_vcs.ml  cvs.ml  cvs.mli  dune  generic_vcs.ml  git_.ml  git_.mli  lib_vcs.ml  lib_vcs.mli  main_vcs.ml  mercurial.ml  mercurial.mli  (+5 more)
main/: dune  main_codemap.ml
src/gui/: Completion.ml  Completion.mli  Controller.ml  Controller.mli  Log_viewer.ml  Model.ml  Model.mli  Parsing.ml  Parsing.mli  Style.ml  Style.mli  View.ml  View.mli  async.ml  cairo_helpers.ml  completion2.ml  controller2.mli  draw_labels.ml  draw_labels.mli  draw_legend.ml  draw_macrolevel.ml  draw_macrolevel.mli  draw_microlevel.ml  draw_microlevel.mli  dune  editor_connection.ml  editor_connection.mli  flag_visual.ml  model2.ml  model2.mli  model_database_code.ml  model_graph_code.ml  model_graph_code.mli  parsing2.ml  parsing2.mli  thread_bug_ml  ui_layers.ml  ui_layers.mli  ui_navigation.ml  ui_navigation.mli  (+8 more)
src/highlighters/: Highlight_AST.ml  Highlight_AST.mli  Highlight_scala.ml  Highlight_scala.mli  Parse_languages.ml  dune  highlight_cpp.ml  highlight_html.ml  highlight_html.mli  highlight_java.mli  highlight_js.ml  highlight_ml.ml  highlight_php.ml  highlight_python.ml
src/main/: Main.ml  dune
src/program_visual/: dune  flag_program_visual.ml  layer_archi.mli  layer_vcs.ml  layer_vcs.mli  treemap_pl.ml  treemap_pl.mli
tests/: main_test.ml
utils/: dune  parallel.ml  parallel.mli
(+69 files in other folders)
