(env
  (dev
    ; TODO -52=? -6=?
    (flags (:standard -w -52-6)))
  (release
    (flags (:standard -O3))))

; dune 2.7 does not like dangling symlinks in docs/literate/principia-latex
; WEIRD: locally I don't even need this directive, but in docker I need it
; You don't need \ bin, because (dirs) is about dirs, and if you don't have
; any targets at the toplevel dune file, you're fine with a dangling bin
(dirs :standard \ docs)
