(env
  (dev
    ; TODO -52=? -6=?
    (flags (:standard -w -52-6)))
  (release
    (flags (:standard -O3))))

; dune 2.7 does not like dangling symlinks in docs/literate/principia-latex
; hence the dirs directive below.
; Adding '\ bin' will not work because '(dirs ...)' is about dirs, so you
; either need to call dune build _build/.../codemap in which case dune will
; not stat the root, but if you do 'dune build' it will complain
(dirs :standard \ docs)
