(library
 (public_name pfff-highlighters)
 (name pfff_highlighters)
 (wrapped false)
 (libraries

   ; pfff deps
   commons commons_core
   pfff-config pfff-h_program-lang
   pfff-lang_GENERIC_base pfff-lang_GENERIC ; now in semgrep actually
   pfff-graph_code

   ; lang-specific
   pfff-lang_ml
   pfff-lang_js
   pfff-lang_scala
   pfff-lang_html
   pfff-lang_nw

   ; generic!
   pfff-lang_GENERIC-naming ; for generic name resolver
 )
 (preprocess (pps ppx_deriving.show))
)
