(library
 (public_name pfff-highlighters)
 (name pfff_highlighters)
 (wrapped false)
 (libraries

   ; pfff deps
   commons
   pfff-h_program-lang
   pfff-lang_GENERIC_base pfff-lang_GENERIC ; now in semgrep actually

   ; now in codemap! local deps
   highlight_code

   ; lang-specific
   pfff-lang_ml
   pfff-lang_js
   pfff-lang_scala
   pfff-lang_html
   pfff-lang_nw
   pfff-lang_lisp

   ; for highlight_php
   database_code

   ; generic!
   pfff-lang_GENERIC-naming ; for generic name resolver
 )
 (preprocess (pps ppx_deriving.show))
)
