(library
 (name codemap)
 (wrapped false)
 (libraries
    ; stdlib deps
    threads
    lablgtk2
    cairo2
    cairo2-gtk
    
    ; pfff deps
    dyp
    commons 
    pfff-h_visualization gui
    pfff-h_program-lang pfff-graph_code  

    pfff-lang_python
    pfff-lang_js
    pfff-lang_php pfff-lang_php-analyze
    pfff-lang_ruby pfff-lang_ruby-analyze

    pfff-lang_java
    pfff-lang_cpp
    pfff-lang_go

    pfff-lang_ml
    pfff-lang_nw

    pfff-lang_lisp

    pfff-lang_html
    pfff-lang_text

    ; now actually in codemap
    pfff-highlighters
    database_code
    layer_code

    ; local deps
    codemap_utils
    h_program_visual
 )
)
