(library
 (name codemap)
 (wrapped false)
 (libraries
    ; stdlib deps
    threads
    lablgtk2
    cairo2
    cairo2-gtk
    
    ; pfff deps
    commons 
    pfff-h_visualization gui
    lib_parsing
    graph_code  

    parser_python.menhir
    parser_javascript.menhir
    parser_php.menhir
    parser_java.menhir
    parser_cpp.menhir
    parser_go.menhir
    parser_ocaml.menhir parser_ocaml.tree_sitter
    parser_lisp.recursive_descent

    ; now in codemap
    pfff-lang_nw
    pfff-lang_html
    pfff-lang_text

    ; now actually in codemap
    pfff-highlighters
    database_code
    layer_code

    ; local deps
    codemap_utils
    h_program_visual
 )
 (preprocess (pps ppx_deriving.show profiling.ppx))
)
