(library
 (public_name highlighters)
 (name highlighters)
 (wrapped false)
 (libraries
   ; standard deps
   fpath
   logs

   ; semgrep deps
   commons
   lib_parsing
   ast_generic ; now in semgrep

   ; lang-specific
   parser_cpp.menhir parser_cpp.ast_generic
   parser_go.menhir parser_go.ast_generic
   parser_java.menhir parser_java.ast_generic
   parser_python.menhir parser_python.ast_generic
   parser_ocaml.menhir parser_ocaml.ast_generic parser_ocaml.tree_sitter
   parser_php.menhir parser_php.ast_generic
   parser_javascript.menhir parser_javascript.ast_generic
   parser_scala.recursive_descent parser_scala.ast_generic
   parser_ruby.tree_sitter parser_ruby.ast_generic
   parser_lisp.recursive_descent
   parser_rust.ast_generic
   parser_jsonnet.tree_sitter parser_jsonnet.ast_generic
   parser_bash.tree_sitter parser_bash.ast_generic
   parser_dockerfile.tree_sitter
   parser_lisp.tree_sitter
   parser_yaml.ast_generic

   ; now in codemap
   parser_html
   parser_nw

   highlight_code ; now in codemap! local deps
   ; for highlight_php
   database_code

   ; generic!
   pfff-lang_GENERIC-naming ; for generic name resolver
 )
 (preprocess (pps ppx_deriving.show))
)
