(executables
 (names Main)
 (libraries 
   ; stdlib deps
   logs
   str
   bigarray ocamlgraph
   ppx_deriving
   uucp uutf

   ; semgrep libs/ deps 
   commons
   paths
   gitignore
   lib_parsing

   ; semgrep languages/ deps
   parser_python.menhir
   parser_javascript.menhir
   parser_php.menhir
   parser_java.menhir
   parser_cpp.menhir
   parser_ocaml.menhir
   parser_lisp.recursive_descent

   ; now in codemap
   pfff-lang_nw
   pfff-lang_html
   pfff-lang_text

   ; codemap lib deps
   visualization gui

   ; local deps
   viewer

 )
 ; for ocamldebug
 (modes native byte)

 (preprocess (pps ppx_deriving.show profiling.ppx))
)

(install
 (package codemap)
 (section bin)
 (files (Main.exe as codemap) )
)
