(executables
 (names Main)
 (libraries 
   ; stdlib deps
   str bigarray
   ocamlgraph
   logs
   ppx_deriving
   uucp uutf

   ; semgrep deps
   commons
   paths
   gitignore

   ; codemap lib deps
   visualization gui
   lib_parsing
   parser_python.menhir
   parser_javascript.menhir
   parser_php.menhir
   parser_java.menhir
   parser_cpp.menhir
   parser_ocaml.menhir
   parser_lisp.recursive_descent

   ; now in codemap
   parser_nw
   parser_html
   parser_text

   ; local deps
   viewer

 )
 ; for ocamldebug
 (modes native byte)

 (preprocess (pps ppx_deriving.show profiling.ppx))
)

(install
 (package codemap)
 (section bin)
 (files (Main.exe as codemap) )
)
