(executables
 (names Main)
 (libraries 
   ; stdlib deps
   str bigarray
   ocamlgraph
   logs
   ppx_deriving
   uucp uutf

   ; semgrep deps
   commons
   paths
   gitignore

   ; codemap lib deps
   color geometry treemap gui
   parsing_core
   parser_python.menhir
   parser_javascript.menhir
   parser_php.menhir
   parser_java.menhir
   parser_cpp.menhir
   parser_ocaml.menhir
   parser_lisp.recursive_descent

   ; from semgrep-pfff-langs
   parser_nw
   codemap_parser_html.menhir
   ; codemap-only
   parser_text

   ; local deps
   viewer

 )
 ; for ocamldebug
 (modes native byte)

 (preprocess (pps ppx_deriving.show profiling.ppx))
)

(install
 (package codemap)
 (section bin)
 (files (Main.exe as codemap) )
)
