; this library used to be in pfff

(library
 (name program_visual)
 (wrapped false)
 (libraries
   ; semgrep deps
   commons 
   lib_parsing

   ; local deps
   visualization
   version_control
   archi_code
   layer_code
 )
 (preprocess
   (pps
      ppx_deriving.show
      profiling.ppx
   )
 )
)
