; this library used to be in pfff

(library
 (name program_visual)
 (wrapped false)
 (libraries
   ; semgrep deps
   commons 
   parsing_core

   ; local deps
   color treemap
   version_control
   archi_code
   layer_code
 )
 (preprocess
   (pps
      ppx_deriving.show
      profiling.ppx
   )
 )
)
